--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   #line in _config.yml. It will appear in your document head meta (for
   #Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://www.zhitao.me/cztchoice-octopress" # the base hostname & protocol for your site
+url: "http://www.zhitao.me/" # the base hostname & protocol for your site
 twitter_username: cztchoice
 github_username:  cztchoice
 
